--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 
   <body>
     <h1>Odin's recipes!</h1>
+
+    <p><a href="recipes/lasagna.html">Lasagna</a></p>
+    <p><a href="recipes/brownie.html">Brownie</a></p>
+    <p><a href="recipes/carbonara.html">Carbonara</a></p>
   </body>
 </html>
