Added style.css and linked from html files

--- a/recipes/brownie.html
+++ b/recipes/brownie.html
@@ -4,6 +4,7 @@
   <head>
     <title>Brownie</title>
     <meta charset="utf-8"/>
+    <link rel="stylesheet" href="../style.css" />
   </head>
 
   <body>
@@ -38,7 +39,7 @@
       <li>Add the chopped dark chocolate and cubed vegan butter to the bowl on top of the saucepan. Allow the chocolate mixture to melt, whisking occasionally until smooth and the chocolate is completely melted. Once the chocolate is completely melted, keep the bowl on the saucepan for an additional 30 to 60 seconds to further warm through.</li>
       <li>Pour the warm butter-chocolate mixture over the aquafaba-sugar mixture and fold together with the silicone spatula.</li>
       <li>Add the flour-cocoa mixture to the wet ingredients and stir until just combined (stop mixing once the flour traces are gone). Fold in the chocolate chips. Pour the batter into the lined pan and smooth out the surface with the spatula.</li>
-      <li><p>Bake the brownies in the preheated oven for 34 to 37 minutes, or until a toothpick inserted in the middle comes out with some moist crumbs and/or a tiny bit of thick batter (the latter could be the melted chocolate chips). If the batter is liquidy or runny, though, the brownies need about 5 more minutes in the oven.</p>
+      <li>Bake the brownies in the preheated oven for 34 to 37 minutes, or until a toothpick inserted in the middle comes out with some moist crumbs and/or a tiny bit of thick batter (the latter could be the melted chocolate chips). If the batter is liquidy or runny, though, the brownies need about 5 more minutes in the oven.
       <p>To avoid overbaking and since every home oven varies, I err on the side of underbaking and check the brownies 5 minutes before I think they're going to be done. My oven usually takes between 34 and 37 minutes.</p></li>
       <li>Transfer the brownies to a wire rack to cool for 30 minutes. Then carefully lift the brownies out of the pan using the parchment paper handles onto the wire rack. Allow to cool for a further 20 to 30 minutes before slicing. Slice the brownies and enjoy!</li>
     </ol>
