--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,37 +11,47 @@
     <h1>Lasagna</h1>
     <img src="../images/lasagna.jpg">
 
-    <h3>Description</h3>
+    <div class="title">
+      <h3>Description</h3>
     
-    <p>Almost everyone loves a hot, cheesy lasagna. Layered with roasted red peppers, beef and ricotta, this lasagna will fill up the whole family and leave delicious leftovers for tomorrow.</p>
+      <div class="text">Almost everyone loves a hot, cheesy lasagna. Layered with roasted red peppers, beef and ricotta, this lasagna will fill up the whole family and leave delicious leftovers for tomorrow.</div>
+    </div>
 
-    <h3>Ingredients:</h3>
+    <div class="title">
+      <h3>Ingredients:</h3>
 
-    <ul>
-      <li>2 pounds ground beef</li>
-      <li>1/2 tablespoon salt</li>
-      <li>1 teaspoon pepper</li>
-      <li>1 onion, diced large</li>
-      <li>2 jars Fresh to Market pasta sauce</li>
-      <li>2 boxes no-boil lasagna</li>
-      <li>1 pound mozzarella, grated</li>
-      <li>1 tub ricotta</li>
-      <li>1 jar roasted red  bell peppers</li>
-      <li>1 tablespoon parsley (optional)</li>
-    </ul>
+      <div class="ulist">
+        <ul>
+          <li>2 pounds ground beef</li>
+          <li>1/2 tablespoon salt</li>
+          <li>1 teaspoon pepper</li>
+          <li>1 onion, diced large</li>
+          <li>2 jars Fresh to Market pasta sauce</li>
+          <li>2 boxes no-boil lasagna</li>
+          <li>1 pound mozzarella, grated</li>
+          <li>1 tub ricotta</li>
+          <li>1 jar roasted red  bell peppers</li>
+          <li>1 tablespoon parsley (optional)</li>
+        </ul>
+      </div>
+    </div>
 
-    <h3>Steps</h3>
+    <div class="title">
+      <h3>Steps</h3>
 
-    <ol>
-      <li>Preheat oven to 350F</li>
-      <li>Brown the ground beef in a large sauté pan and season with salt and pepper</li>
-      <li>When beef is nearly fully cooked, add onions and cook for 5 minutes</li>
-      <li>Add pasta sauce and bring to a boil, then reduce heat and simmer for 15 minutes.</li>
-      <li>In a 9x13-inch baking dish, place a thin layer of the sauce mixture. Cover with pasta sheets, then place another layer of sauce completely covering the pasta sheets</li>
-      <li>Arrange strips of roasted red peppers about 2 inches apart. Cover liberally with mozzarella, then place one teaspoon of ricotta every 2 inches</li>
-      <li>Repeat this process 2 more times. Finish the top layer with pasta sauce and mozzarella only</li>
-      <li>Cover and bake for 45 minutes. Uncover and bake an additional 15 minutes or until the top is golden brown. Sprinkle with parsley to garnish if desired</li>
-    </ol>
+      <div class="olist">
+        <ol>
+          <li>Preheat oven to 350F</li>
+          <li>Brown the ground beef in a large sauté pan and season with salt and pepper</li>
+          <li>When beef is nearly fully cooked, add onions and cook for 5 minutes</li>
+          <li>Add pasta sauce and bring to a boil, then reduce heat and simmer for 15 minutes.</li>
+          <li>In a 9x13-inch baking dish, place a thin layer of the sauce mixture. Cover with pasta sheets, then place another layer of sauce completely covering the pasta sheets</li>
+          <li>Arrange strips of roasted red peppers about 2 inches apart. Cover liberally with mozzarella, then place one teaspoon of ricotta every 2 inches</li>
+          <li>Repeat this process 2 more times. Finish the top layer with pasta sauce and mozzarella only</li>
+          <li>Cover and bake for 45 minutes. Uncover and bake an additional 15 minutes or until the top is golden brown. Sprinkle with parsley to garnish if desired</li>
+        </ol>
+      </div>
+    </div>
   </body>
 </html>
 
